new proj/src/objects/Data_Dictionary__c.object
<CustomObject>
    <fields>
        <fullName>DD_Tier_1_P_L__c</fullName>
        <label>DD Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Management (EM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power &amp; Water (P&amp;W)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Tier_2_P_L__c</fullName>
        <label>DD Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>DD_Tier_1_P_L__c</controllingField>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Definition__c</fullName>
        <label>Field Definition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Length__c</fullName>
        <label>Field Length</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Field Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Field_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>None Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll-Up Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lookup Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master-Detail Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist (Multi-Select)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area (Long)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area (Rich)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text (Encrypted)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Unique?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_Energy_Standard_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GE Energy Standard Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Data Dictionary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Object_Name__c</columns>
        <columns>NAME</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Definition__c</columns>
        <columns>Field_Type__c</columns>
        <columns>GE_Energy_Standard_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Data_Dictionary</fullName>
        <columns>Object_Name__c</columns>
        <columns>NAME</columns>
        <columns>Field_Label__c</columns>
        <columns>Field_Definition__c</columns>
        <columns>Field_Type__c</columns>
        <columns>GE_Energy_Standard_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>Data Dictionary</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SFDCDD-{00000}</displayFormat>
        <label>Data Dictionary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>